# retail-lakehouse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: results.md  run.py
dags/: retail_lakehouse_dag.py
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: ADR-001-medallion-architecture.md  ADR-002-scd2-and-point-in-time.md
great_expectations/: README.md
great_expectations/expectations/: silver_customers.json  silver_order_items.json  silver_orders.json  silver_products.json
spark/: bronze_ingest.py  silver_refine.py
src/rlh/: __init__.py  __main__.py  bronze.py  config.py  delta_io.py  expectations.py  generate.py  logging_setup.py  reconcile.py  report.py  silver.py  warehouse.py
tests/: conftest.py  test_airflow_dag_structure.py  test_cli.py  test_delta_io.py  test_expectations.py  test_generate.py  test_reconcile_e2e.py  test_silver.py  test_spark_structure.py
transform/: dbt_project.yml  profiles.yml
transform/models/marts/: _marts.yml  dim_customer.sql  dim_date.sql  dim_product.sql  fact_sales.sql
transform/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
transform/snapshots/: customer_snapshot.sql
transform/tests/: assert_scd2_one_current_version.sql
