[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-lakehouse"
version = "0.1.0"
description = "Batch medallion retail lakehouse: bronze/silver Delta, dbt gold star schema with SCD2, Great Expectations data quality, and cross-layer reconciliation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Prasannakumar Kasindala", email = "Kasindalap@gmail.com" }]
keywords = ["lakehouse", "medallion", "delta-lake", "dbt", "scd2", "star-schema",
            "great-expectations", "data-quality", "data-engineering"]

dependencies = [
  "deltalake>=1.6",
  "dbt-duckdb>=1.9",
  "great_expectations>=1.0",
  "duckdb>=1.0",
  "pyarrow>=15",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6"]
spark = ["pyspark>=3.5", "delta-spark>=3.2"]

[project.scripts]
rlh = "rlh.__main__:main"

[project.urls]
Homepage = "https://github.com/PrasannakumarKasindala/retail-lakehouse"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 95
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
